# modernpython

./: README.md  pyproject.toml
src/my_modern_python/: console.py
