[tool.poetry]
name = "my-modern-python"
version = "0.1.0"
description = ""
authors = ["fenglin-ssb <fnh@ssb.no>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-modern-python = "my_modern_python.console:main"